# web-crawler

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  main.py  plan.md  pyproject.toml
docs/: CONTENT_POLICY.md  README.md
src/: crawler.py  url_frontier.py
src/crawler/: __init__.py  agent.py  api.py  cli.py  config.py  content_policy.py  crawl.py  daemon.py  discovery.py  domain_manager.py  domain_state.py  domain_store.py  error_stats.py  extract.py  frontier.py  links.py  migrate.py  output.py  result.py  schema.py  storage.py  tls.py  urls.py
src/crawler/core/: __init__.py  adaptive_fetcher.py  browser_fetcher.py  fetcher.py  protocols.py
src/crawler/sql_migrations/: 001_initial_schema.sql  __init__.py
src/utils/: robots_parser.py
tests/: test_content_policy.py  test_crawl.py  test_daemon_behavior.py  test_discovery.py  test_domain_manager.py  test_domain_store.py  test_engine_behavior.py  test_extract.py  test_fetcher.py  test_frontier.py  test_links.py  test_migrate.py  test_output.py  test_storage.py
