[project]
name = "web-crawler"
version = "0.1.0"
description = "Async web crawler with browser support"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "typer>=0.12",
    "pydantic-settings>=2.0",
    "selectolax>=0.3",
    "pybloom-live>=4.0",
    "robotexclusionrulesparser>=1.7",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff"]
browser = ["playwright"]
agent = ["playwright", "anthropic>=0.70"]
all = ["playwright", "anthropic>=0.70"]

[project.scripts]
crawler = "crawler.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crawler"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
